@@ -241,6 +241,8 @@ div.tabdiv {
 }
 
 .tabs a.active {
+                            top: 1px;
+                            position: relative;
                             border-top: 1px solid #808080;
                             border-left: 1px solid #808080;
                             border-right: 1px solid #808080;
