@@ -19,7 +19,7 @@ $block_count = $row['block_count'];
 
 mysqli_free_result($result);
 }
-$query = NULL;
+
 
 $page_count = ceil($block_count / $paginated_rows);  
 
@@ -44,7 +44,7 @@ if ($result = mysqli_query($db_connect, $query)) {
 
 mysqli_free_result($result);
 }
-$query = NULL;
+
 
 if ( $first_txblock > 0 ) {
 ?>
@@ -114,7 +114,7 @@ if ($result = mysqli_query($db_connect, $query)) {
 
 mysqli_free_result($result);
 }
-$query = NULL;
+
 
 
 // TX block data
@@ -160,7 +160,7 @@ if ($result = mysqli_query($db_connect, $query)) {
    }
 mysqli_free_result($result);
 }
-$query = NULL;
+
 
 ?>
       
