@@ -83,6 +83,7 @@
 0.1.3:
 -Cleanup / Tweaks
 -Improved chart-loading UI / UX
+-Password reset
 -------------------------------------------------------------------
 
 
